--- a/sber-test-bot/Dockerfile
+++ b/sber-test-bot/Dockerfile
@@ -1,8 +1,7 @@
-FROM python:3.7-alpine
+FROM python:3.7
 
 WORKDIR /usr/src/app
 COPY Pipfile* ./
-RUN apk update && apk add g++ gcc libxml2 libxslt-dev
 RUN pip install pipenv
 RUN pipenv install --system --deploy
 COPY . ./
